<resources>
    <string name="app_name">GartenhausApp_2</string>
    <string name="edit_plant">Pflanzen bearbeiten</string>
    <string name="edit_arduinos">Arduinos bearbeiten</string>
    <string name="ip_adresse">IP-Adresse</string>
    <string name="plant_id">Pflanzen ID</string>
    <string name="plant_name">Pflanzenname</string>
    <string name="edit">Edit</string>
    <string name="new_plant">Neue Pfalnze</string>
    <string name="menue">Menü</string>
    <string name="graph">Graph</string>
    <string name="light">Licht</string>
    <string name="max">Max</string>
    <string name="minus">-</string>
    <string name="min">Min</string>
    <string name="humid">Feuchtigkeit</string>
    <string name="groundhumid">Boden Feuchtigkeit</string>
    <string name="temp">Temperatur</string>
    <string name="exit">EXIT</string>
    <string name="save">Speichern</string>
    <string name="delete">Löschen</string>
    <string name="minGmaxTemp">Min Temperatur ist größer als Max Temperatur</string>
    <string name="minGmaxHumid">Min Humid ist größer als Max Humid</string>
    <string name="minGmaxGroundHumid">Min Feucht ist größer als Max Feucht</string>
    <string name="tempValue">Temperatur nur zwischen -20°C und 50°C</string>
    <string name="humidValue">Humid nur zwischen 0g/m³ und 100g/m³</string>
    <string name="edit_all">Bitte alles ausfüllen!</string>
    <string name="plant">Pflanze</string>
    <string name="no">Keine</string>
    <string name="arduino_id">Arduino ID</string>
    <string name="live">Live</string>
    <string name="heater">Heizung</string>
    <string name="sprayer">Luftbefeuchter</string>
    <string name="pump">Pumpe</string>
    <string name="cooler">Kühler</string>
    <string name="shutters">Rollläden</string>
    <string name="none">nan</string>
    <string name="start">Start</string>
    <string name="back">Zurück</string>
    <string name="please_wait">Bitte warten</string>
    <string name="stop">Stop</string>
    <string name="error">Error</string>
    <string name="reload">Neu laden</string>
</resources>
