<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Live">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:text="@string/temp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txVtemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:text="@string/none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:text="@string/humid"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txVhumid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:text="@string/none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="5dp"
                android:paddingTop="0dp"
                android:text="@string/groundhumid"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txVgroundHumid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:text="@string/none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:text="@string/light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txVlight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:text="@string/none" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="89dp"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="181dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:enabled="false"
                android:id="@+id/swheater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heater"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:enabled="false"
                android:id="@+id/swsprayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sprayer"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:enabled="false"
                android:id="@+id/swpump"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pump"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:enabled="false"
                android:id="@+id/swlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:enabled="false"
                android:id="@+id/swcooler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cooler"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="invisible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="invisible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:enabled="false"
                android:id="@+id/swshutters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shutters"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnStartStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/start"
        android:onClick="btnStartStop"/>
</RelativeLayout>