<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_Plant">
    <ImageView
        android:id="@+id/imVDeletePlaint"
        android:layout_width="69dp"
        android:layout_height="53dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imVSavePlaint"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:clickable="true"
        android:contentDescription="@string/delete"
        android:focusable="true"
        app:srcCompat="@drawable/baseline_delete_black_24dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imVSavePlaint"
        android:layout_width="69dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:contentDescription="@string/save"
        android:focusable="true"
        app:srcCompat="@drawable/baseline_save_black_24dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/imVClosePlaint"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:contentDescription="@string/exit"
        app:srcCompat="@drawable/baseline_close_black_24dp"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_name"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/plant_name" />


            <EditText
                android:id="@+id/edTName"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/plant_name"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="UselessLeaf" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="UselessLeaf" />

        <LinearLayout
            android:id="@+id/llTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/temp"
                android:layout_marginRight="45dp"
                android:layout_marginEnd="45dp"/>

            <EditText
                android:id="@+id/edTminTemp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/min"
                android:inputType="numberSigned|numberDecimal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:hint="@string/max"
                android:id="@+id/edTmaxTemp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="UselessLeaf" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/groundhumid"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="@string/groundhumid" />

            <EditText
                android:id="@+id/edTminGroundHumid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/min"
                android:inputType="numberSigned|numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edTmaxGroundHumid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/max"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="UselessLeaf" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/humid"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/humid"
                android:layout_marginRight="37dp"
                android:layout_marginEnd="37dp"/>

            <EditText
                android:hint="@string/min"
                android:id="@+id/edTminHumid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:hint="@string/max"
                android:id="@+id/edTmaxHumid"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            tools:ignore="UselessLeaf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/light"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/light" />

            <Spinner
                android:id="@+id/spinnerLight"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>