<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Graph">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imVback"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:max="3"
        android:progress="0" />

    <ImageView
        android:id="@+id/imVback"
        android:layout_width="37dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true"
        android:onClick="back_Click"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:layout_toEndOf="@+id/imVback"
        android:layout_toRightOf="@+id/imVback"
        android:text="@string/temp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="325dp"
        android:layout_marginStart="325dp"
        android:text="@string/light"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="195dp"
        android:layout_marginStart="195dp"
        android:text="@string/groundhumid"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="122dp"
        android:layout_marginStart="122dp"
        android:text="@string/humid"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/spinnergraph"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/graph"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/graph"
        android:layout_marginBottom="10dp" />

</RelativeLayout>