<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="298dp"
        android:layout_height="495dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <TableLayout
            android:id="@+id/tablePlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tablePlantHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    style="@style/table_Plant_Header_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/plant_id" />

                <TextView
                    style="@style/table_Plant_Header_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    android:text="@string/plant_name" />

            </TableRow>

        </TableLayout>
    </ScrollView>


    <include
        layout="@layout/downbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imVaddPlant"
            android:layout_width="53dp"
            android:layout_height="46dp"
            android:contentDescription="@string/new_plant"
            app:srcCompat="@drawable/plus" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imVeditPlant"
            android:layout_width="53dp"
            android:layout_height="46dp"
            android:contentDescription="@string/edit_plant"
            android:visibility="invisible"
            app:srcCompat="@drawable/edit" />
    </LinearLayout>

</RelativeLayout>