<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity"
    android:background="@drawable/background">



    <ScrollView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <TableLayout
            android:id="@+id/tableArduino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableArduinoHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    style="@style/table_Plant_Header_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="44dp"
                    android:layout_marginRight="44dp"
                    android:text="@string/ip_adresse" />

                <TextView
                    style="@style/table_Plant_Header_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    android:text="@string/plant_name" />

            </TableRow>

        </TableLayout>
    </ScrollView>

    <include
        layout="@layout/downbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/ll"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="220dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/plant"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/plant" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>



    <ImageView
        android:id="@+id/imVlinechart"
        android:layout_width="69dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="120dp"
        android:clickable="true"
        android:contentDescription="@string/graph"
        android:focusable="true"
        android:onClick="btn_Graph"
        app:srcCompat="@drawable/linechart"
        tools:srcCompat="@drawable/linechart" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imVremote_control"
            android:layout_width="69dp"
            android:layout_height="73dp"
            android:clickable="true"
            android:contentDescription="@string/remote_control"
            android:focusable="true"
            android:onClick="remote_control"
            android:visibility="invisible"
            app:srcCompat="@drawable/remote_control"
            tools:srcCompat="@drawable/remote_control" />


        <ImageView
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/imVSaveArduino"
            android:layout_width="69dp"
            android:layout_height="53dp"
            android:clickable="true"
            android:contentDescription="@string/save"
            android:focusable="true"
            android:onClick="btnClick_SaveArduino"
            android:visibility="invisible"
            app:srcCompat="@drawable/save"
            tools:srcCompat="@drawable/save"
            android:layout_marginEnd="10dp" />
    </LinearLayout>

</RelativeLayout>